@@ -19,7 +19,6 @@ package io.sapl.vaadin.base;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
@@ -56,8 +55,7 @@ public class SecurityHelper {
     public static List<String> getUserRoles() {
         Authentication userAuthentication = SecurityContextHolder.getContext().getAuthentication();
         if (userAuthentication != null) {
-            return userAuthentication.getAuthorities().stream().map(GrantedAuthority::getAuthority)
-                    .collect(Collectors.toList());
+            return userAuthentication.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
         } else {
             return new ArrayList<>();
         }
